--- a/config/swarthmore-opinions.yaml
+++ b/config/swarthmore-opinions.yaml
@@ -7,10 +7,10 @@ SUBJECT: "opinions"
 
 BASE_URL: "https://swarthmorephoenix.com"
 LISTING_BASE_URL: "https://swarthmorephoenix.com/category/opinions/page/"
-ARTICLE_SELECTOR: "h2.post-item-title > a[href^='https://swarthmorephoenix.com/']"
-TITLE_SELECTOR: "article div.title-subtitle > h1[class^='post-title']"
-CONTENT_SELECTOR: "div[class^='content-main'] > div[class^='dropcap-content']"
-DATE_SELECTOR: "time[itemprop^='datePublished']"
+ARTICLE_SELECTOR: "h2.title56 > a[href^='https://swarthmorephoenix.com/']"
+TITLE_SELECTOR: "article div h1[class^='post-title']"
+CONTENT_SELECTOR: "div.primary56 div[class^='entry-content']"
+DATE_SELECTOR: "div.meta56__date"
 
 URL_DATE_PATTERN: "https://swarthmorephoenix.com/(\\d+)/(\\d+)"
 DATE_FORMAT: "%B %d, %Y"
