--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ dependencies = [
     "spider-client>=0.1.25",
     "webdriver-manager>=4.0.2",
     "pyyaml>=6.0.2",
+    "ipykernel>=6.29.5",
+    "nltk>=3.9.1",
+    "matplotlib>=3.10.0",
+    "scipy>=1.14.1",
 ]
 
 [dependency-groups]
