--- a/config/brown-opinions.yaml
+++ b/config/brown-opinions.yaml
@@ -12,6 +12,6 @@ ARTICLE_SELECTOR: "div > h2.headline > a[href^='https://www.browndailyherald.com
 TITLE_SELECTOR: "article.full-article > h1"
 CONTENT_SELECTOR: "article.full-article > div.article-content"
 DATE_SELECTOR: "aside > div > span.can-localize"
+DATE_FORMATS: ["%B %d, %Y", "%b. %d, %Y", "%b %d, %Y"]
 
 URL_DATE_PATTERN: "https://www.browndailyherald.com/article/(\\d+)/(\\d+)"
-DATE_FORMAT: "%B %d, %Y"
