--- a/config/stanford-opinions.yaml
+++ b/config/stanford-opinions.yaml
@@ -12,6 +12,6 @@ ARTICLE_SELECTOR: "div > h3 > a[href^='https://stanforddaily.com/']"
 TITLE_SELECTOR: "article div > h1.elementor-heading-title"
 CONTENT_SELECTOR: "article div > div.e-con-inner"
 DATE_SELECTOR: "#date > div > span"
+DATE_FORMATS: ["%b. %d, %Y", "%b %d, %Y", "%B %d, %Y"]
 
 URL_DATE_PATTERN: "https://stanforddaily.com/(\\d+)/(\\d+)"
-DATE_FORMAT: "%b. %d, %Y"
