--- a/config/swarthmore-opinions.yaml
+++ b/config/swarthmore-opinions.yaml
@@ -11,6 +11,6 @@ ARTICLE_SELECTOR: "h2.title56 > a[href^='https://swarthmorephoenix.com/']"
 TITLE_SELECTOR: "article div h1[class^='post-title']"
 CONTENT_SELECTOR: "div.primary56 div[class^='entry-content']"
 DATE_SELECTOR: "div.meta56__date"
+DATE_FORMATS: ["%B %d, %Y", "%b. %d, %Y", "%b %d, %Y"]
 
 URL_DATE_PATTERN: "https://swarthmorephoenix.com/(\\d+)/(\\d+)"
-DATE_FORMAT: "%B %d, %Y"
