--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "nltk>=3.9.1",
     "matplotlib>=3.10.0",
     "scipy>=1.14.1",
+    "llama-index-readers-web>=0.1.12",
 ]
 
 [dependency-groups]
