--- a/config/brown-opinions.yaml
+++ b/config/brown-opinions.yaml
@@ -9,8 +9,8 @@ BASE_URL: "https://www.browndailyherald.com"
 LISTING_BASE_URL: "https://www.browndailyherald.com/section/opinions?per_page=20&page="
 ARTICLE_SELECTOR: "div > h2.headline > a[href^='https://www.browndailyherald.com/article']"
 
-TITLE_SELECTOR: "article.full-article > h1"
-CONTENT_SELECTOR: "article.full-article > div.article-content"
+TITLE_SELECTORS: ["article.full-article > h1"]
+CONTENT_SELECTORS: ["article.full-article > div.article-content"]
 DATE_SELECTOR: "aside > div > span.can-localize"
 DATE_FORMATS: ["%B %d, %Y", "%b. %d, %Y", "%b %d, %Y"]
 
