--- a/config/uoregon-columns.yaml
+++ b/config/uoregon-columns.yaml
@@ -9,8 +9,8 @@ BASE_URL: "https://dailyemerald.com"
 LISTING_BASE_URL: "https://dailyemerald.com/category/columns/page/"
 ARTICLE_SELECTOR: "#content div > div > h2> a[href^='https://dailyemerald.com/']"
 
-TITLE_SELECTOR: "div > div > h1.sno-story-headline"
-CONTENT_SELECTOR: "#sno-story-body-content"
+TITLE_SELECTORS: ["div > div > h1.sno-story-headline"]
+CONTENT_SELECTORS: ["#sno-story-body-content"]
 DATE_SELECTOR: "div.sno-story-date > span"
 DATE_FORMATS: ["%B %d, %Y", "%b. %d, %Y", "%b %d, %Y"]
 
