--- a/config/harvard-op-eds.yaml
+++ b/config/harvard-op-eds.yaml
@@ -9,8 +9,8 @@ BASE_URL: "https://www.thecrimson.com"
 LISTING_BASE_URL: "https://www.thecrimson.com/tag/op-eds/page/"
 ARTICLE_SELECTOR: " div > div > div.preview-content > h1 > a[href^='/article']"
 
-TITLE_SELECTOR: "#root > div.css-nmmrhs > div.css-bgn7sn > h1"
-CONTENT_SELECTOR: "#root > div > div.css-85imjw"
+TITLE_SELECTORS: ["#root > div.css-nmmrhs > div.css-bgn7sn > h1"]
+CONTENT_SELECTORS: ["#root > div > div.css-85imjw"]
 DATE_SELECTOR: "#root div > span > time"
 DATE_FORMATS: ["%B %d, %Y", "%b. %d, %Y", "%b %d, %Y"]
 
