--- a/config/ucdavis-opinions.yaml
+++ b/config/ucdavis-opinions.yaml
@@ -9,8 +9,8 @@ BASE_URL: "https://theaggie.org"
 LISTING_BASE_URL: "https://theaggie.org/category/opinion/page/"
 ARTICLE_SELECTOR: "div > h3.entry-title > a[href^='https://theaggie.org/']"
 
-TITLE_SELECTOR: "article div > h1.tdb-title-text"
-CONTENT_SELECTOR: "article div > div.td_block_wrap.tdb_single_content"
+TITLE_SELECTORS: ["article div > h1.tdb-title-text"]
+CONTENT_SELECTORS: ["article div > div.td_block_wrap.tdb_single_content"]
 
 DATE_SELECTOR: ""
 DATE_FORMATS: ["%B %d, %Y", "%b. %d, %Y", "%b %d, %Y"]
