--- a/config/utaustin-columns.yaml
+++ b/config/utaustin-columns.yaml
@@ -8,8 +8,9 @@ SUBJECT: "opinions"
 BASE_URL: "https://thedailytexan.com"
 LISTING_BASE_URL: "https://thedailytexan.com/category/opinion/columns/page/"
 ARTICLE_SELECTOR: "div > h2 > a[href^='https://thedailytexan.com']"
-TITLE_SELECTOR: "#sno-main-content > div > div > h1[class^='sno-story-headline']"
-CONTENT_SELECTOR: "#sno-story-body-content"
+
+TITLE_SELECTORS: ["#sno-main-content > div > div > h1[class^='sno-story-headline']"]
+CONTENT_SELECTORS: ["#sno-story-body-content"]
 DATE_SELECTOR: "#sno-main-content > div > div > div.sno-story-date > span"
 DATE_FORMATS: ["%B %d, %Y", "%b. %d, %Y", "%b %d, %Y"]
 
