--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "matplotlib>=3.10.0",
     "scipy>=1.14.1",
     "llama-index-readers-web>=0.1.12",
+    "scrapy>=2.12.0",
 ]
 
 [dependency-groups]
