--- a/config/stanford-opinions.yaml
+++ b/config/stanford-opinions.yaml
@@ -7,7 +7,11 @@ SUBJECT: "opinions"
 
 BASE_URL: "https://stanforddaily.com"
 LISTING_BASE_URL: "https://stanforddaily.com/category/opinions/page/"
-ARTICLE_SELECTOR: "div > h3 > a[href^='https://stanforddaily.com/']"
+ARTICLE_SELECTORS:
+  [
+    "div > h3 > a[href^='https://stanforddaily.com/']",
+    "div > h3 > a[href^='https://stanforddaily.com/']",
+  ]
 
 TITLE_SELECTORS: ["article div > h1.elementor-heading-title"]
 CONTENT_SELECTORS: ["article div > div.e-con-inner"]
