--- a/config/swarthmore-opinions.yaml
+++ b/config/swarthmore-opinions.yaml
@@ -7,7 +7,11 @@ SUBJECT: "opinions"
 
 BASE_URL: "https://swarthmorephoenix.com"
 LISTING_BASE_URL: "https://swarthmorephoenix.com/category/opinions/page/"
-ARTICLE_SELECTOR: "h2.title56 > a[href^='https://swarthmorephoenix.com/']"
+ARTICLE_SELECTORS:
+  [
+    "h2.title56 > a[href^='https://swarthmorephoenix.com/']",
+    "h2.title56 > a[href^='https://swarthmorephoenix.com/']",
+  ]
 
 TITLE_SELECTORS: ["article div h1[class^='post-title']"]
 CONTENT_SELECTORS: ["div.primary56 div[class^='entry-content']"]
