--- a/config/utaustin-columns.yaml
+++ b/config/utaustin-columns.yaml
@@ -7,9 +7,14 @@ SUBJECT: "opinions"
 
 BASE_URL: "https://thedailytexan.com"
 LISTING_BASE_URL: "https://thedailytexan.com/category/opinion/columns/page/"
-ARTICLE_SELECTOR: "div > h2 > a[href^='https://thedailytexan.com']"
+ARTICLE_SELECTORS:
+  [
+    "div > h2 > a[href^='https://thedailytexan.com']",
+    "div > h2 > a[href^='https://thedailytexan.com']",
+  ]
 
-TITLE_SELECTORS: ["#sno-main-content > div > div > h1[class^='sno-story-headline']"]
+TITLE_SELECTORS:
+  ["#sno-main-content > div > div > h1[class^='sno-story-headline']"]
 CONTENT_SELECTORS: ["#sno-story-body-content"]
 DATE_SELECTOR: "#sno-main-content > div > div > div.sno-story-date > span"
 DATE_FORMATS: ["%B %d, %Y", "%b. %d, %Y", "%b %d, %Y"]
