--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "scipy>=1.14.1",
     "llama-index-readers-web>=0.1.12",
     "scrapy>=2.12.0",
+    "aiofiles>=24.1.0",
 ]
 
 [dependency-groups]
