--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ dependencies = [
     "llama-index-llms-openai>=0.1.31",
     "llama-index-agent-openai>=0.2.9",
     "tiktoken>=0.8.0",
+    "firecrawl-py>=1.12.0",
+    "firecrawl>=1.12.0",
+    "llama-index-core>=0.10.68.post1",
 ]
 
 [dependency-groups]
